hphp/hack/test/typecheck/constraints/tparam_class_variable_bad.php
<?hh

function test<T>(class<T> $c): void {
  $_ = $c::$doesNotExist;
}
